package humanCreater.factory;

public class Skills {
    public String text() {
        return "Some";
    }
}
