package humanCreater.factory.intellectualAbilities;

public interface IntellectualAbilities {
    void IntellectMethod();
}
