package humanCreater.factory.physicalAbilities;

public interface PhysicalAbilities {
     void PhysicMethod();
}
